fix hide scrollbar

--- a/wp-content/themes/origarden/assets/css/common.css
+++ b/wp-content/themes/origarden/assets/css/common.css
@@ -644,6 +644,13 @@ header .--registration a:hover {
     display: inherit !important;
 }
 
-body {
-  overflow: hidden; /* Hide scrollbars */
+html {
+  overflow:   scroll;
 }
+::-webkit-scrollbar {
+    width: 0px;
+    background: transparent; /* make scrollbar transparent */
+}
+/*body {
+  overflow: hidden;
+}*/
